--- a/.github/workflows/first-workflow.yaml
+++ b/.github/workflows/first-workflow.yaml
@@ -12,3 +12,16 @@ jobs:
                   python -V
                   pip -V
                   python --version
+    parallel-job-macos:
+      runs-on: macos-latest
+      steps:
+        - name: View SW Version
+          run: sw_vers
+    dependant-job:
+      runs-on: windows-latest
+      needs: run-shell-commands
+      steps:
+        - name: echo a string
+          run: Write-Output "Windows String"
+        - name: Error Step
+          run: does-not-exist
