--- a/.github/workflows/first-workflow.yaml
+++ b/.github/workflows/first-workflow.yaml
@@ -24,4 +24,4 @@ jobs:
         - name: echo a string
           run: Write-Output "Windows String"
         - name: Error Step
-          run: does-not-exist
+          run: doesnotexist
