--- a/.github/workflows/workflow-commands.yaml
+++ b/.github/workflows/workflow-commands.yaml
@@ -8,10 +8,10 @@ jobs:
             - name: Setting an error message
               run: echo "::error::Missing semicolon"
             - name: Setting an error message with params
-              run: echo "::error title=Error title::Error, file=app.js, line=2,endline=3,endColumn=6::Missing semicolon"
+              run: echo "::error title=Error title, file=app.js, line=2,endline=3,endColumn=6::Missing semicolon"
             - name: Setting an debug message with params
-              run: echo "::error title=Debug title::Debug, file=app.js, line=2,endline=3,endColumn=6::Missing semicolon"
+              run: echo "::debug title=Debug title, file=app.js, line=2,endline=3,endColumn=6::Missing semicolon"
             - name: Setting an warning message with params
-              run: echo "::error title=Warning title::Warning, file=app.js, line=2,endline=3,endColumn=6::Missing semicolon"  
+              run: echo "::warning title=Warning title, file=app.js, line=2,endline=3,endColumn=6::Missing semicolon"  
             - name: Setting an notice message with params
-              run: echo "::error title=Notice title::Notice, file=app.js, line=2,endline=3,endColumn=6::Missing semicolon"
+              run: echo "::notice title=Notice title, file=app.js, line=2,endline=3,endColumn=6::Missing semicolon"
