--- a/.github/workflows/workflow-commands.yaml
+++ b/.github/workflows/workflow-commands.yaml
@@ -6,12 +6,16 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - name: Setting an error message
-              run: echo "::error::Missing semicolon"
+              run: echo "Missing semicolon"
+            
             - name: Setting an error message with params
-              run: echo "::error title=Error title, file=app.js, line=2, endline=3, col=5, endColumn=7::Missing semicolon"
-            - name: Setting an debug message with params
-              run: echo "::debug title=Debug title, file=app.js, line=2, endline=3, col=5, endColumn=7::Missing semicolon"
-            - name: Setting an warning message with params
-              run: echo "::warning title=Warning title, file=app.js, line=2, endline=3, col=5, endColumn=7::Missing semicolon"  
-            - name: Setting an notice message with params
-              run: echo "::notice title=Notice title, file=app.js, line=2, endline=3, col=5, endColumn=7::Missing semicolon"
+              run: echo "::error title=Error title,file=app.js,line=2,endLine=3,col=5,endColumn=7::Missing semicolon"
+            
+            - name: Setting a debug message with params
+              run: echo "::debug title=Debug title,file=app.js,line=2,endLine=3,col=5,endColumn=7::Missing semicolon"
+            
+            - name: Setting a warning message with params
+              run: echo "::warning title=Warning title,file=app.js,line=2,endLine=3,col=5,endColumn=7::Missing semicolon"
+            
+            - name: Setting a notice message with params
+              run: echo "::notice title=Notice title,file=app.js,line=2,endLine=3,col=5,endColumn=7::Missing semicolon"
