groups-and-secret

--- a/.github/workflows/workflow-commands.yaml
+++ b/.github/workflows/workflow-commands.yaml
@@ -19,3 +19,15 @@ jobs:
             
             - name: Setting a notice message with params
               run: echo "::notice title=Notice title,file=app.js,line=2,endLine=3,col=5,endColumn=7::Missing semicolon"
+
+            - name: Group of logs
+              run: |
+                  echo "::group::My Group title"
+                  echo "Inside Group"
+                  echo "::endgroup::" 
+                
+            - name: Masking a value
+              run: echo "::add-mask::Secret String"
+
+            - name: Echo a secret
+              run: echo "Secret String"
