--- a/.github/workflows/workflow-commands.yaml
+++ b/.github/workflows/workflow-commands.yaml
@@ -31,3 +31,7 @@ jobs:
 
             - name: Echo masked value
               run: echo "Secret String"
+
+            - name: Setting a warning message with params
+              run: echo "::warning title=Warning title,file=app.js,line=2,endLine=3,col=5,endColumn=7::Warning title%0AMissing semicolon"
+               
