added-new-logic

--- a/.github/workflows/working-dir-and-shells.yaml
+++ b/.github/workflows/working-dir-and-shells.yaml
@@ -1,5 +1,11 @@
 name: Working Dirs & Shells
 on: [push]
+defaults:
+    run:
+        shell: bash         # workflow level
+        #working-directory: /de/ed
+
+
 jobs:
     display-wd-info:
         runs-on: ubuntu-latest
@@ -12,14 +18,31 @@ jobs:
                   echo $GITHUB_REPOSITORY
                   echo $GITHUB_WORKSPACE
 
+
+            - name: Change Working Directory
+              working-directory: /home/runner
+              run: pwd
+
+
+              
     display-wd-info-windows:
         runs-on: windows-latest
+        defaults:
+            run:
+                shell: pwsh           # overriding job level
         steps:
             - name: Display Working Dir & List Fikles
               run: |
+                  Get-Location
                   dir
-                  ls -a
-                  echo $GITHUB_SHA
-                  echo $GITHUB_REPOSITORY
-                  echo $GITHUB_WORKSPACE
+                  echo $env:GITHUB_SHA
+                  echo $env:GITHUB_REPOSITORY
+                  echo $env:GITHUB_WORKSPACE
+
+
+            - name: Python Shell
+              shell: python           # weriding step level
+              run: |
+                import platform
+                print(platform.processor())
 
