--- a/.github/workflows/simple-action.yaml
+++ b/.github/workflows/simple-action.yaml
@@ -9,7 +9,7 @@ jobs:
               id: greet
               uses: actions/hello-world-javascript-action@e76147da8e5c81eaf017dede5645551d4b94427b
               with: 
-                who-to-greet: Python
+                who-to-greet: Smith
             - name: Log Greeting Time
               run: echo "${{steps.greet.outputs.time}}"
               
