added-specified-events

--- a/.github/workflows/events_specvify_activities.yaml
+++ b/.github/workflows/events_specvify_activities.yaml
@@ -1,5 +1,10 @@
 name: Repository Events
-on: [push, pull_request, issues]   # in this case will trigger push in any branch push
+on: 
+  push:
+  pull_request:
+    types: [assigned,  opened, reopened, synchronize]
+  issues:
+    types: [opened]
 
 jobs:
     checkout-test:
