--- a/.github/workflows/manually-triggered.yaml
+++ b/.github/workflows/manually-triggered.yaml
@@ -41,3 +41,6 @@ jobs:
                 echo "Option: ${{ inputs.option }}"
                 echo "Boolean: ${{ inputs.boolean }}"
                 echo "Environment: ${{ inputs.environment }}"
+
+# run from console
+# gh workflow run manually-triggered.yaml -f string="from gh cli" -f environment=production --ref main
